--- a/voleyboll/css/one_page.css
+++ b/voleyboll/css/one_page.css
@@ -1,47 +1,52 @@
 
 
-.news {
+.one__news {
     display: flex;
     justify-content: space-around;
 }
-.news__block {
+.one__block {
     background-color: #4827c0;
     min-height: 600px;
     height: 100%;
-    max-width: 420px;
+    width: 100%;
     border-radius: 15px;
     margin-top: 20px;
 }
 
-.news__block-inner {
-    padding: 20px;
+.one__block-inner {
+    padding: 50px;
+    padding-top: 30px;
 }
 
-.news__block-date, .news__block-title, .news__block-text {
+.one__block-date, .one__block-title, .one__block-text {
     margin-bottom: 30px;
 }
 
-.news__block-text,  .news__block-date {
-
+.one__block-text,  .one__block-date {
     color: #84adfd;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
 }
 
-.news__block-img {
+.one__block-title {
+    font-size: 22px;;
+}
+
+.one__block-img {
+    margin: 0 auto;
     width: 100%;
     margin-bottom: 20px;
-    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
+    object-fit: cover;
     text-align: center;
-    overflow: hidden;
+ 
 }
-.news__block-img img {
+.one__block-img img {
     margin: 0 auto;
     max-width: 100%;
-    object-fit: cover;
+    
 }
 
