--- a/css/all_games.css
+++ b/css/all_games.css
@@ -1,32 +1,67 @@
 .all__games-container {
     margin-top: 50px;
-
+    margin-bottom: 50px;
     width: 100%;
     height: 100%;
- 
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
-.match__block {
-    background: #1949aa;
-    max-width: 380px;
-    border-radius: 0;
-    height: 200px;
-    margin: 0 0px;
-    margin-top: 20px;
-    padding: 20px 20px;
-
+.all__games-inner {
+    width: 100%;
 }
-
-.match__block:hover {
+.table {
+    width: 100%;
+    margin-top: 50px;
     background-color: #1A50BA;
+    border-radius: 15px;
+    height: 100%;
+    padding-bottom: 30px;
 }
 
+table {
+    width: 100%;
+    border-radius: 15px;
+    height: 100%;
+}
+
+th{
+    padding: 10px 0;
+    font-size: 24px;
+    text-align: left;
+    background-color:rgba(76, 122, 213, 0.8)
+}
+
+tr:hover {
+    background-color: #1e5bd4;
+}
+
+th,td {
+    padding: 15px 40px;
+}
+
+td {
+    font-size: 18px;
+    padding: 20px 40px;
+}
+.swiper4{
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    padding: 10px 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    list-style: none;
+    overflow: hidden;
+    padding: 0;
+    z-index: 1;
+}
 @media (max-width: 770px){
 
     .match__block {
         max-width: 100%;
     }
+
 }
