--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -42,7 +42,7 @@ header {
 }
 
 section {
-    padding: 50px 0;
+    padding: 20px 0;
 }
 
 
@@ -100,21 +100,27 @@ section {
 .news {
     display: flex;
     height: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.first__block {
+    max-width: 800px;
+    min-width: 550px;
+    margin-right: 30px;
+
 }
 
 .main__news {
+    width: 100%;
     height: 100%;
-    max-width: 800px;
-    
     position: relative;
     background: #1A50BA;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    margin-right: 30px;
+    
 
 }
 
@@ -147,25 +153,23 @@ section {
 .picture__news {
     height: 100%;
     width: 100%;
+    object-fit: cover;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
 
-.nav__news {
-    max-width: 800px;
-    height: 50px;
-    background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
 
 .all__news {
-    padding: 30px;
-    width: 400px;
+    max-width: 450px;
     background: #1443a0;
     border-radius: 15px;
+}
+
+.all__news-inner {
+    padding: 30px;
+    padding-bottom: 0;
 }
 
 .all__news_titles {
@@ -217,6 +221,7 @@ section {
     background: #1A50BA;
     border-radius: 15px;
     height: 200px;
+    max-width: 400px;
     margin: 0 30px;
     padding: 20px 20px;
 }
@@ -229,15 +234,15 @@ section {
 
 
 .swiper {
-    MAX-width: 1300px;
-    height: 270px;
+    max-width: 1300px;
+    height: 100%;
 
     padding: 10px 0;
   }
 
 .swiper1{
     height: 400px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 50px;
     padding: 10px 0;
 }
@@ -377,6 +382,28 @@ footer {
     background-color: #4C7AD4;
 }
 
+.footer__partners {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.footer__partners-block {
+    display: flex;
+    align-items: center ;
+    max-width: 360px;
+    font-weight: normal;
+    padding: 5px 20px;
+}
+.partners__logo {
+    height: 60px;
+}
+
+.partners__logo img {
+    height: 100%;
+}
+
 .footer__text {
     margin-top: 20px;
     padding: 0 15px;
@@ -441,25 +468,15 @@ footer {
 
 
 
-@media (max-width: 1300px){
-    .main__news {
-        max-width: 700px;
-    }
-}
 
-@media (max-width: 1250px) {
-    .all__news {
-        margin-top: 20px;
-        width: 80%;
-    }
-    .main__news {
-        width: 100%;
-        max-width: 100%;
-        min-width: 100%;
-    }
-}
 
-@media (max-width: 1025px) {
+
+@media (max-width: 1024px) {
+
+    .news {
+        flex-direction: column;
+        align-items: center;
+    }
 
     .photo__img {
         object-fit: cover;
@@ -470,6 +487,9 @@ footer {
 
     .first__block {
         width: 100%;
+        max-width: 100%;
+        min-width: unset;
+        margin-right: 0;
     }
 
     .main__news {
@@ -480,8 +500,13 @@ footer {
     
     .all__news {
         margin-top: 40px;
-        padding: 30px;
+        
         width: 100%;
+        max-width: 100%;
+    }
+
+    .all__news-inner {
+        padding: 30px;
     }
     
     .news__all_img {
@@ -745,6 +770,11 @@ footer {
         width: 65%;       
         padding: 10px 10px 10px 10px;
     }
+    .title__news {
+        height: unset;
+        font-size: 18px;
+        padding: 25px;
+    }
     
  }
 
@@ -753,6 +783,12 @@ footer {
 
 
 @media (max-width: 500px) {
+
+
+    .match__block {
+        max-width: 380px;
+    }
+
 
     header {
         padding: 10px 5px;
@@ -775,6 +811,11 @@ footer {
 
     .swiper2{
         padding: 10px 0;
+    }
+    .title__news {
+        height: unset;
+        font-size: 16px;
+        padding: 15px;
     }
     
 
@@ -802,8 +843,19 @@ footer {
         height: 100%;
         padding: 0 10px 0 10px;
     }
-    .all__news {
+    .all__news-inner {
         padding: 30px 15px;
+    }
+
+    .match__block {
+        max-width: 320px;
+        height: 170px;
+        padding: 20px 10px;
+    }
+
+    .next__match {
+        padding: 15px 0;
+     
     }
 
   
