--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     font-style: normal;
     font-display: swap;
   }
-
 @font-face {
     font-family: "Roboto";
     src: url(../fonts/Roboto-Regular.woff2) format("woff2");
@@ -13,11 +12,6 @@
     font-style: normal;
     font-display: swap;
   }
-
-
-
-
-
 html {
     background-image: url(/img/Group\ 4.png);
     background-repeat: no-repeat;
@@ -27,13 +21,11 @@ html {
     font-weight: bold;
     background-color: #0F3889;
 }
-
 a {
     color: white;
     list-style: none;
     text-decoration: none;
 }
-
 header {
     display: flex;
     justify-content: space-between;
@@ -44,16 +36,12 @@ header {
 section {
     padding: 20px 0;
 }
-
-
-
 .container {
     max-width: 1300px;
     padding: 0 30px;
     margin: 0 auto;
     overflow: hidden;
 }
-
 .title {
     font-size: 48px;
     text-align: left;
@@ -64,31 +52,26 @@ section {
 
 
 
+
 .header__logo {
     display: flex;
     align-items: center;
     max-width: 360px;
-
 }
-
 .header__menu {
     display: flex;
     align-items: center;
 }
-
 .name {
     font-size: 24px;
 }
-
 .menu__ul{
     display: flex;
 }
-
 .menu__li:hover{
     transition: 0.2s;
     border-bottom: 3px solid sandybrown;
 }
-
 .menu__li {
     padding: 5px 20px;
 }
@@ -101,14 +84,12 @@ section {
     display: flex;
     height: 100%;
     justify-content: space-between;
-
 }
 
 .first__block {
     max-width: 800px;
     min-width: 550px;
     margin-right: 30px;
-
 }
 
 .main__news {
@@ -116,14 +97,8 @@ section {
     height: 100%;
     position: relative;
     background: #1A50BA;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    
-
+    border-radius: 15px;
 }
-
 .title__news {
     position: absolute;
     display: flex;
@@ -136,30 +111,21 @@ section {
     text-align: left;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    
 }
-
 .img__news {
     height: 100%;
-
 }
-
 .img__news-block {
     height: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
-
 .picture__news {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    border-radius: 15px;
 }
-
 
 .all__news {
     max-width: 450px;
@@ -171,36 +137,28 @@ section {
     padding: 30px;
     padding-bottom: 0;
 }
-
 .all__news_titles {
     display: flex;
     justify-content: space-between;
     font-size: 22px;
     margin-bottom: 50px;
 }
-
 .news__all_container {
     margin: 20px 0;
     height: 110px;
     width: 100%;
     display: flex;
 }
-
 .news__all_container:hover {
     background-color: rgb(59, 59, 221);
     transition: 0.4s;
 }
-
 .news__all_img {
     height: 100%;
     overflow: hidden;
 }
-
 .news__picture {
    width: 90%;
-
-   
-
 }
 .news_all_info {
     display: flex;
@@ -209,11 +167,10 @@ section {
     text-align: left;
     padding: 10px 0 10px 0;
 }
-
-
 .date {
     color:#84adfd;
 }
+
 
 
 
@@ -230,32 +187,18 @@ section {
     background: #1c56ca;
     transition: 0.5s;
 }
-
-
-
 .swiper {
     max-width: 1300px;
     height: 100%;
 
     padding: 10px 0;
   }
-
-.swiper1{
-    height: 400px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding: 10px 0;
-}
-
-
-
 .match__info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 24px;
 }
-
 .match__block hr {
     margin: 20px auto;
     border-top: 1px solid #4C7AD4;
@@ -264,7 +207,6 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
 .time {
@@ -272,7 +214,6 @@ section {
     font-size: 24px;
     padding-left: 5px;
 }
-
 .place {
     text-align: right;
 }
@@ -294,13 +235,11 @@ section {
     height: 100%;
     padding-bottom: 30px;
 }
-
 table {
     width: 100%;
     border-radius: 15px;
     height: 100%;
 }
-
 th{
     padding: 10px 0;
     font-size: 24px;
@@ -311,11 +250,9 @@ th{
 tr:hover {
     background-color: #1e5bd4;
 }
-
 th,td {
     padding: 15px 40px;
 }
-
 td {
     font-size: 18px;
     padding: 20px 40px;
@@ -323,48 +260,45 @@ td {
 
 
 
-
+.swiper1{
+    height: 400px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 10px 0;
+}
 .photos .title {
     display: flex;
     justify-content: space-between;
-
 }
-
 .photos .title a {
     font-size: 24px;
     margin-top: auto;
+    text-decoration: underline;
 }
-
 .photos__container {
     width: 100%;
 }
-
 .photo__block {
     margin: 0 10px;
     height: 400px;
     overflow: hidden;
 }
-
 .photo__block-mini {
     display: flex !important;
     flex-direction: column;
 }
-
 .photo__img {
     width: 100%;
 }
-
 .photo__img:hover {
     transform: scale(1.2);
     transition: 1s;
 }
-
 .photo__block-first {
     height: 47%;
     overflow: hidden;
     object-fit: cover;
     background-color:rgba(76, 122, 213, 0.8);
-
 }
 .photo__block-second {
     height: 47%;
@@ -374,30 +308,21 @@ td {
     margin-top: auto;
 }
 
-.about__us {
-    padding-bottom: 100px;
-}
 
-.about__us_text {
-    padding: 0 15px;
-    font-size: 22px;
-    color: #729AE9;
-    max-width: 1000px;
-    line-height: 35px
-}
+
+
+
 
 footer {
     padding: 20px 0;
     background-color: #4C7AD4;
 }
-
 .footer__partners {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 15px;
 }
-
 .footer__partners-block {
     display: flex;
     align-items: center ;
@@ -408,11 +333,9 @@ footer {
 .partners__logo {
     height: 60px;
 }
-
 .partners__logo img {
     height: 100%;
 }
-
 .footer__text {
     margin-top: 20px;
     padding: 0 15px;
@@ -425,26 +348,26 @@ footer {
     flex-direction: column;
     align-items: center;
 }
-
 .footer__society {
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-
 .instagram, .youtube, .vk {
     margin: 0 20px;
 }
-
 .mobile__header {
     display: none;
     background-color: rgba(24, 24, 128, 0.8)
 }
 
+
+
 .mobile__header-menu {
     transition: 0.1s;
     top: -2000px;
+    opacity: 0;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -454,11 +377,10 @@ footer {
 
 .active_burger{
     top: 0;
+    opacity: 1;
     position: fixed;
     
 }
-
-
 
 .swiper2{
     height: 100%;
@@ -522,8 +444,16 @@ footer {
         width: 250px;
     }
 
+    .news__all_img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
     .news_all_info {
-        width: 40%;
+        margin-left: 30px;
+        max-width: 450px;
+
     }
 
     .mobile__header {
@@ -603,6 +533,7 @@ footer {
 
     .mobile__header-menu {
         transition: 1s;
+ 
     }
     .active2 {
         position: fixed;
@@ -759,6 +690,24 @@ footer {
         position: fixed;
         z-index: 12;
     }
+
+
+
+    .news__all_img {
+        max-width: 200px;
+        min-width: 130px;
+        max-height: 100%;
+    }
+
+    .news__picture {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .news_all_info {
+        margin-left: 20px;
+    }
 }
 
  @media (max-width: 600px) {
@@ -827,7 +776,9 @@ footer {
         padding: 15px;
     }
     
-
+    .news_all_info {
+        margin-left: 10px;
+    }
     
 } 
 
@@ -883,8 +834,21 @@ footer {
     section {
         padding: 20px 0;
     }
+    .news__all_container {
+        height: 150px;
+    }
 
+    .title {
+        font-size: 28px;
+    }
+
+    .photos .title a {
+        font-size: 20px;
+        text-decoration: underline;
+    }
 }
+
+
 
 
 @media (max-width: 321px) {
